config/deploy/k8s/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          imagePullPolicy: Always
          command:
            - cloudflared
            - tunnel
            - run
            - --url
            - http://ingress-nginx-controller.ingress-nginx.svc.cluster.local:80
            - --token
            - "$(CLOUDFLARE_TUNNEL_TOKEN)"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      restartPolicy: Always
