config/deploy/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ${DOCKER_USERNAME}/worker:${DOCKER_TAG}
          imagePullPolicy: Always
          command:
            - python3
            - /app/worker.py
          resources:
            requests:
              cpu: 500m
              memory: 5000Mi
            limits:
              cpu: 5000m
              memory: 8000Mi
          livenessProbe:
            exec:
              command:
                - python3
                - /app/health_check.py
                - --check-once
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - python3
                - /app/health_check.py
                - --check-once
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10

          volumeMounts:
            - name: conn-patch
              mountPath: /conn-patch
      volumes:
        - name: conn-patch
          configMap:
            name: worker-conn-patch
