config/deploy/k8s/tf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf
  template:
    metadata:
      labels:
        app: tf
    spec:
      containers:
        - name: tf
          image: ${DOCKER_USERNAME}/tf:${DOCKER_TAG}
          resources:
            requests:
              cpu: 1000m
              memory: 5000Mi
            limits:
              cpu: 5000m
              memory: 10000Mi
          volumeMounts:
            - name: tf-persistent-storage
              mountPath: /models
            - name: tf-config
              mountPath: /tmp/models.config
              subPath: models.config
      volumes:
        - name: tf-persistent-storage
          persistentVolumeClaim:
            claimName: tf-pvc
        - name: tf-config
          configMap:
            name: tf-models-config

---
apiVersion: v1
kind: Service
metadata:
  name: tf
spec:
  selector:
    app: tf
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
