config/deploy/k8s/nginx.yaml
# Nginx Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: ${DOCKER_USERNAME}/nginx:${DOCKER_TAG}
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
---
# Nginx Service
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: atlantis.trading
      http:
        paths:
          - pathType: Prefix
            path: "/private"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/poll"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/public"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/backend"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/ws"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/health"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/backend/health"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/_app"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
